<?xml version="1.0"?>
<package format="2">
  <name>cuda_test</name>
  <version>0.0.0</version>
  <description>Hello World via CUDA, ROS and STL</description>
  <maintainer email="timo.stoffregen@monash.edu">Timo S</maintainer>
  <license>GNU GPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>

</package>
